[project]
name = "nzshm-model"
version = "0.13.6"
description = "The logic tree definitions, final configurations, and versioning of the New Zealand | Aotearoa National Seismic Hazard Model"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    {name = "Chris DiCaprio", email = "c.dicaprio@gns.cri.nz>"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}    
]
requires-python = ">=3.10,<4.0"
#     "python (>=3.10,<=3.14)",

dependencies = [
    "dacite (>=1.6.0)",
    "lxml (>=6.0)",
    "nzshm-common (>=0.8.4)"
]

[tool.poetry]
packages = [
	{include = "nzshm_model"},
    {include = "tests", format = "sdist" }
]

[project.scripts]
slt = 'nzshm_model.scripts.slt:slt'
model = 'nzshm_model.scripts.cli:cli'

[project.optional-dependencies]
scripts = [
    "boto3",
    "nshm-toshi-client",
    "click"
]

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "black",
    "bump2version",
    "isort",
    "tox",
    "mypy",
    "flake8", 
    "flake8-docstrings",
    "pytest",
    "pytest-cov"
]
doc = [
    "griffe (>=1.14.0,<2.0.0)",
    "mkdocs-autorefs",
    "mkdocs-click (>=0.9.0,<0.10.0)",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings-python (>=1.18.2,<2.0.0)",
    "mkdocstrings"
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
