[project]
name = "nzshm-model"
version = "0.15.0"
description = "The logic tree definitions, final configurations, and versioning of the New Zealand | Aotearoa National Seismic Hazard Model"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    { name = "Chris DiCaprio", email = "c.dicaprio@gns.cri.nz" },
    { name = "NSHM Compute Working Group", email = "nshm@gns.cri.nz" }
]
requires-python = ">=3.10,<4.0"

dependencies = [
    "dacite>=1.6.0",
    "lxml>=6.0",
    "nzshm-common>=0.9.0",
]

[project.scripts]
slt = "nzshm_model.scripts.slt:slt"
model = "nzshm_model.scripts.cli:cli"

[project.optional-dependencies]
scripts = ["click"]
toshi = [
    "boto3",
    "nshm-toshi-client",
]

[dependency-groups]
dev = [
    "bump2version",
    "mypy",
    "pip-audit>=2.9.0,<3.0.0",
    "pytest-cov",
    "pytest",
    "ruff",
    "safety>=3.6.2,<4.0.0",
    "tox",
    "tox-uv",
]
doc = [
    "mkdocs-autorefs",
    "mkdocs-click>=0.9.0,<0.10.0",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings-python>=2.0.0,<3.0.0",
    "mkdocstrings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nzshm_model"]

[tool.hatch.build.targets.sdist]
include = ["nzshm_model", "tests"]

[tool.uv]
exclude-newer = "1 week"
# nzshm-common ships fresh - always resolve to latest.
exclude-newer-package = { "nzshm-common" = false, "nshm-toshi-client" = false }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_missing_imports = true
